<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">AsAsFans</string>
    <string name="a_soul">A-SOUL</string>
    <string name="video">视频</string>
    <string name="fan_art_pic">二创图片</string>
    <string name="record_studio">录音棚</string>
    <string name="tools">工具</string>
    <string name="fan_video">热门二创</string>
    <string name="hot_cut_video">热门切片</string>
    <string name="new_release_video">最新发布</string>
    <string name="history_recommend_video">历史推荐</string>
    <string name="video_cover">视频封面</string>
    <string name="settings">设置</string>
    <string name="toolbox">工具箱</string>
    <string name="zhi_net_check_duplicate">枝网查重</string>
    <string name="dialect_dict">方言词典</string>
    <string name="little_composition">小作文</string>
    <string name="group_chat_history_public">论坛管理群聊天记录公示</string>
    <string name="asoul_wiki">一个魂维基百科 A-SOUL WIKI</string>
    <string name="composition_generator">小作文生成器</string>
    <string name="art_and_record_site">A-SOUL原画录播站</string>
    <string name="status_search">成分姬</string>
    <string name="QA_search">QA查询（羊驼打过的太极）</string>
    <string name="loading">正在加载中</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="refresh">刷新</string>
    <string name="open_in_browser">在浏览器中打开</string>
    <string name="asasfans_slogan">独属于一个魂的聚合平台</string>

    <string name="ava">向晚</string>
    <string name="bella">贝拉</string>
    <string name="carol">珈乐</string>
    <string name="diana">嘉然</string>
    <string name="eileen">乃琳</string>
    <string name="bella_carol">贝贝珈</string>
    <string name="eileen_bella">乃贝</string>
    <string name="diana_ava">嘉晚饭</string>
    <string name="eileen_carol">琳狼</string>
    <string name="carol_eileen">珈特琳</string>
    <string name="eileen_ava">果丹皮</string>
    <string name="eileen_diana">琳嘉女孩</string>
    <string name="up">up主</string>
    <string name="more">更多</string>
    <string name="search">搜索</string>
    <string name="change_theme">切换主题</string>
    <string name="theme">主题</string>
    <string name="general">常规</string>
    <string name="black_list">黑名单</string>
    <string name="black_list_manage">黑名单管理</string>
    <string name="cache">缓存</string>
    <string name="clear_photo_cache">清理图片缓存</string>
    <string name="clear_web_cache">清理网页缓存</string>
    <string name="about">关于</string>
    <string name="check_update">检查版本更新</string>
    <string name="feedback">意见反馈/提交BUG</string>
    <string name="about_this">关于本软件</string>
    <string name="pay_attention">请注意</string>
    <string name="no_problem">没问题</string>
    <string name="let_it_go">算了吧</string>

    <string name="introduce">介绍</string>
    <string name="developer">开发者</string>
    <string name="fuck_off_this_up">不想再看到这个up主</string>
    <string name="fuck_off_this_video">不想再看到这个视频</string>
    <string name="fuck_off_this_tag">不想再看到含有这些TAG的视频</string>
    <string name="release_time">发布时间：%s</string>
    <string name="video_introduction">视频简介</string>
    <string name="not_interested">不感兴趣</string>
    <string name="tag">TAG</string>
    <string name="click_here_to_search">搜索点这里捏~</string>
    <string name="collapse">收起</string>
    <string name="skip_with_sec">%d 跳过</string>

    <string name="result_video">视频</string>
    <string name="result_user">用户</string>
    <string name="result_tag">标签</string>
</resources>