<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/general">
        <Preference
            app:icon="@drawable/ic_baseline_block_24"
            app:isPreferenceVisible="false"
            app:key="black_list"
            app:title="@string/black_list_manage" />
        <ListPreference
            app:defaultValue="0"
            app:entries="@array/entries_theme"
            app:entryValues="@array/entries_value_theme"
            app:icon="@drawable/ic_change_theme_24"
            app:key="change_theme"
            app:title="@string/change_theme" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/cache">
        <Preference
            app:icon="@drawable/ic_clear_cache_24"
            app:key="clear_photo_cache"
            app:title="@string/clear_photo_cache" />
        <Preference
            app:icon="@drawable/ic_clear_cache_24"
            app:key="clear_web_cache"
            app:title="@string/clear_web_cache" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/about">
        <Preference
            app:icon="@drawable/ic_baseline_update_24"
            app:key="check_update"
            app:title="@string/check_update" />
        <Preference
            app:icon="@drawable/ic_outline_feedback_24"
            app:key="feedback"
            app:title="@string/feedback" />
        <Preference
            app:icon="@drawable/ic_outline_info_24"
            app:key="about_this"
            app:title="@string/about_this" />
    </PreferenceCategory>


</PreferenceScreen>