<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_video_show_bottom_dialog"
    android:clipToPadding="false"
    android:orientation="vertical"
    android:padding="16dp">

    <View
        android:layout_width="100dp"
        android:layout_height="3dp"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:background="@color/half_tp_grey" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/release_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/release_time"
                android:textSize="16sp"
                tools:text="发布时间：2020-02-02" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@color/half_tp_grey" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/video_introduction"
                android:textColor="?attr/colorPrimaryVariant"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/video_introduction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                tools:text="酥酥又们，快和我一起来完成这首歌吧！\n表演：又一 酥酥又\n原曲：《心引力》--王俊凯/蔡依林" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@color/half_tp_grey" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/not_interested"
                android:textColor="?attr/colorPrimaryVariant"
                android:textSize="20sp" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/tag_chip_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                app:chipSpacingVertical="0dp"
                app:singleLine="false"
                app:singleSelection="false">

            </com.google.android.material.chip.ChipGroup>

            <Button
                android:id="@+id/no_this_tag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fuck_off_this_tag" />

            <Button
                android:id="@+id/no_this_video"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fuck_off_this_video" />

            <Button
                android:id="@+id/no_this_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fuck_off_this_up" />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>