<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data class="VideoDataBinding">

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/video_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimaryVariant"
                android:theme="@style/ThemeOverlay.Material3.Dark"
                app:contentInsetStart="0dp"
                app:layout_scrollFlags="scroll|enterAlways"
                app:menu="@menu/menu_main"
                app:popupTheme="@style/ThemeOverlay.Material3.Light">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="8dp"
                        android:background="@drawable/icon_asasf_colorful_logo"
                        android:contentDescription="@string/app_name" />

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="36dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="8dp">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="8dp"
                            android:background="@drawable/ic_search"
                            android:contentDescription="@string/search" />

                        <TextView
                            android:id="@+id/search_view"
                            android:layout_width="match_parent"
                            android:layout_height="35dp"
                            android:background="@drawable/search_bar"
                            android:gravity="start|center_vertical"
                            android:paddingStart="36dp"
                            android:paddingEnd="8dp"
                            android:text="@string/click_here_to_search"
                            android:textColor="@color/cardGray"
                            android:textSize="14sp" />
                    </FrameLayout>

                </LinearLayout>

            </androidx.appcompat.widget.Toolbar>


            <com.google.android.material.tabs.TabLayout
                android:id="@+id/video_tab_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:tabIndicatorFullWidth="false" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/video_view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>