<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="?attr/materialCardViewElevatedStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="1dp"
    android:hapticFeedbackEnabled="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.card.MaterialCardView
            style="?attr/materialCardViewElevatedStyle"
            android:layout_width="160dp"
            android:layout_height="100dp"
            android:layout_gravity="center_vertical"
            android:layout_margin="4dp"
            app:cardElevation="0dp">

            <ImageView
                android:id="@+id/video_cover"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/video_cover"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/video_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:background="@color/half_tp_grey"
                android:padding="2dp"
                android:textColor="@color/white"
                tools:text="12:23" />

        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/video_title"
                android:layout_width="match_parent"
                android:layout_height="45sp"
                android:ellipsize="end"
                android:maxLines="2"
                android:paddingTop="4dp"
                android:textColor="@color/text_color"
                android:textSize="15sp"
                android:textStyle="bold"
                tools:ignore="SpUsage"
                tools:text="《一拳超人》第三季 68.埼玉被当头棒喝，饿狼再次进化！最凶Vs最强！（最新章）" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:background="@drawable/ic_up_24"
                    android:contentDescription="@string/fan_video" />

                <TextView
                    android:id="@+id/video_up"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="4dp"
                    android:ellipsize="end"
                    android:textColor="?attr/colorPrimaryVariant"
                    tools:text="田所浩二" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:gravity="center_vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:background="@drawable/ic_watch_24"
                    android:contentDescription="@string/fan_video" />

                <TextView
                    android:id="@+id/video_views"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="4dp"
                    tools:text="1.2万" />

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_marginStart="48dp"
                    android:background="@drawable/ic_danmaku_24"
                    android:contentDescription="@string/fan_video" />

                <TextView
                    android:id="@+id/video_comments"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="4dp"
                    tools:text="1234" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:background="@drawable/ic_partition_24"
                    android:contentDescription="@string/fan_video" />

                <TextView
                    android:id="@+id/video_partition"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="4dp"
                    tools:text="日常" />

            </LinearLayout>

        </LinearLayout>

        <ImageButton
            android:id="@+id/video_more_button"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="bottom"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/ic_baseline_more_vert_24"
            android:contentDescription="@string/more" />

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>